--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@
 
 # Visual Studio cache directory
 .vs/
+.vscode/
 
 # Gradle cache directory
 .gradle/
@@ -73,3 +74,6 @@ crashlytics-build.properties
 
 # Individual Log Files
 /[Dd]ebug/*
+
+# Individual Screenshots
+/[Ss]creenshots/*
